--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/mongodb": "^3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "php-imap/php-imap": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -25,7 +26,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
