--- a/.env
+++ b/.env
@@ -36,3 +36,10 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+IMAP_HOST=imap.gmail.com
+IMAP_PORT=993
+IMAP_ENCRYPTION=ssl
+IMAP_VALIDATE_CERT=true
+IMAP_USERNAME=robin.shingora1440@gmail.com
+IMAP_PASSWORD=ro170588  
