--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
-        "php-imap/php-imap": "^3.0"
+        "php-imap/php-imap": "^3.0",
+        "webklex/laravel-imap": "1.0.3.7"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
