set the filter dropdowns dynamic

--- a/.env
+++ b/.env
@@ -41,5 +41,5 @@ IMAP_HOST=imap.gmail.com
 IMAP_PORT=993
 IMAP_ENCRYPTION=ssl
 IMAP_VALIDATE_CERT=true
-IMAP_USERNAME=robin.shingora1440@gmail.com
-IMAP_PASSWORD=ro170588  
+IMAP_USERNAME=robin@interbitsolutions.com
+IMAP_PASSWORD=user121#
