--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,6 @@ storage/*.key
 !.env
 Homestead.yaml
 Homestead.json
-
+nbproject/
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
