--- a/.env
+++ b/.env
@@ -43,3 +43,5 @@ IMAP_ENCRYPTION=ssl
 IMAP_VALIDATE_CERT=true
 IMAP_USERNAME=robin@interbitsolutions.com
 IMAP_PASSWORD=user121#
+elastic_rec_del_period=1
+TOKEN=5a16a5e50af69
